--- a/src/app/components/caculator/caculator.component.html
+++ b/src/app/components/caculator/caculator.component.html
@@ -1,9 +1,11 @@
+<div style="display: flex; height: 750px; justify-content: center; align-items: center;">
+
 <div id="caculator">
     <div class="row_1">
         <input type="text" value="" >
     </div>
     <div class="row-2">
-        <button id="clear"value="Clear">Clear</button>
+        <button  id="clear">Clear</button>
         <button id="divide" >/</button>
 
     </div>
@@ -31,4 +33,6 @@
         <button id="comma" >.</button>
         <button id="equal">=</button>
     </div>
+</div>
+
 </div>
